fixed horizontal scrollbar,display flex.

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 /* fixed header section */
 header {
   background-color: white;
-  display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
@@ -16,6 +15,10 @@ header {
   font-family: helvetica, arial, sans-serif;
   font-size: smaller;
   border-bottom: 1px solid rgb(224, 213, 213);
+}
+
+.flex{
+  display: flex;
 }
 
 ul li {
@@ -64,11 +67,6 @@ h1 {
   margin-left: 30%;
   margin-right: 25%;
   border-bottom: 1px solid rgb(224, 213, 213);
-}
-
-.social-media img {
-  width: 14px;
-  display: flex;
 }
 
 .social-media {
@@ -190,7 +188,6 @@ article p button {
   width: 20%;
   margin-top: 2%;
   float: right;
-  display: flex;
   justify-content: flex-end;
   flex-direction: column;
 }
@@ -309,7 +306,6 @@ article p button {
 }
 
 .social-media-bottom {
-  display: flex;
   width: 14px;
   margin-top: 8px;
   margin-left: 10%;
@@ -317,7 +313,6 @@ article p button {
 }
 
 .bottom-social {
-  display: flex;
   margin-top: 10px;
   margin-left: 27%;
   margin-right: 35%;
@@ -355,8 +350,7 @@ article p button {
   text-decoration: none;
 }
 
-.newsletterflex {
-  display: flex;
+.newslettersection {
   justify-content: flex-start;
   margin-top: 2%;
   margin-left: 1%;
@@ -397,7 +391,6 @@ article p button {
 }
 
 .more-space-section1 {
-  display: flex;
   justify-content: flex-start;
   width: 73%;
   margin-left: 2%;
@@ -405,7 +398,6 @@ article p button {
 
 .more-space-section2 {
   margin-top: 4%;
-  display: flex;
   justify-content: flex-start;
   width: 75%;
   margin-left: 2%;
@@ -429,7 +421,6 @@ article p button {
 }
 
 .editors-picks-section {
-  display: flex;
   justify-content: flex-start;
   width: 74%;
   margin-left: 2%;
@@ -449,9 +440,8 @@ article p button {
 }
 
 .footer-container {
-  display: flex;
   justify-content: flex-start;
-  width: 100%;
+  width: 97%;
   margin-left: 2%;
   border-top: 2px double rgb(224, 213, 213);
   border-bottom: 1px solid rgb(224, 213, 213);
@@ -479,7 +469,6 @@ article p button {
 /* footer banner css */
 
 .footer-banner {
-  display: flex;
   justify-content: flex-start;
   justify-content: space-between;
   margin-left: 2%;
@@ -487,6 +476,7 @@ article p button {
   font-size: 11px;
   color: slategray;
   margin-top: 1.6%;
+  margin-bottom: 2%;
 }
 
 .footer-banner a {
